Bug #35715
multisite: memory leak from curl_multi_add_handle()
% Done:
0%
Source:
Tags:
multisite
Backport:
mimic luminous
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):
Description
on shutdown, requests that are still linked to the curl_multi handle are not being removed from the handle before finishing
<error> <unique>0xc</unique> <tid>1</tid> <kind>Leak_DefinitelyLost</kind> <xwhat> <text>32 bytes in 1 blocks are definitely lost in loss record 13 of 31</text> <leakedbytes>32</leakedbytes> <leakedblocks>1</leakedblocks> </xwhat> <stack> <frame> <ip>0x4C29C23</ip> <obj>/usr/lib64/valgrind/vgpreload_memcheck-amd64-linux.so</obj> <fn>malloc</fn> <dir>/builddir/build/BUILD/valgrind-3.13.0/coregrind/m_replacemalloc</dir> <file>vg_replace_malloc.c</file> <line>299</line> </frame> <frame> <ip>0x507FC31</ip> <obj>/usr/lib64/libcurl.so.4.3.0</obj> </frame> <frame> <ip>0x5081AE2</ip> <obj>/usr/lib64/libcurl.so.4.3.0</obj> <fn>curl_multi_add_handle</fn> </frame> <frame> <ip>0x472EDA</ip> <obj>/usr/bin/radosgw</obj> <fn>RGWHTTPManager::link_request(rgw_http_req_data*)</fn> </frame> <frame> <ip>0x47461E</ip> <obj>/usr/bin/radosgw</obj> <fn>RGWHTTPManager::manage_pending_requests()</fn> </frame> <frame> <ip>0x474D64</ip> <obj>/usr/bin/radosgw</obj> <fn>RGWHTTPManager::reqs_thread_entry()</fn> </frame> <frame> <ip>0x47550C</ip> <obj>/usr/bin/radosgw</obj> <fn>RGWHTTPManager::ReqsThread::entry()</fn> </frame> <frame> <ip>0xE8E1E24</ip> <obj>/usr/lib64/libpthread-2.17.so</obj> <fn>start_thread</fn> </frame> <frame> <ip>0x119B9BAC</ip> <obj>/usr/lib64/libc-2.17.so</obj> <fn>clone</fn> </frame> </stack> </error>
Related issues
History
#1 Updated by Casey Bodley over 4 years ago
- Status changed from In Progress to Fix Under Review
#2 Updated by Casey Bodley over 4 years ago
- Status changed from Fix Under Review to Pending Backport
#3 Updated by Nathan Cutler over 4 years ago
- Copied to Backport #36213: mimic: multisite: memory leak from curl_multi_add_handle() added
#4 Updated by Nathan Cutler over 4 years ago
- Copied to Backport #36214: luminous: multisite: memory leak from curl_multi_add_handle() added
#5 Updated by Nathan Cutler about 4 years ago
- Status changed from Pending Backport to Resolved