rgw: fix leak of curl handle on shutdown

addresses a valgrind leak reported from curl_multi_add_handle().
requests that are still linked to the curl_multi handle need to be
unlinked and finished with ECANCELED, rather than just finished

Fixes: http://tracker.ceph.com/issues/35715

Signed-off-by: Casey Bodley <cbodley@redhat.com>